# claude_code_scafolding_templates

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  gemini_migration.md  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.yaml  performance-reviewer.yaml  test-writer.yaml
.claude/commands/: decompose.md  gogogo.md  implement.md  interview.md  parallel-implement.md  parallel-manual.md  spike.md  test-plan.md
.claude/hooks/: bash-file-guard.sh  branch-guard.sh  lint-frontend.sh  sdlc-gate.sh  teammate-completed.sh  teammate-idle.sh  worktree-guard.sh
.claude/rules/: code-style.md  error-handling.md  react-patterns.md  security.md  testing.md
.claude/skills/react-frontend/: SKILL.md
.claude/skills/testing/: SKILL.md
scripts/: test-agent-teams.sh  test-lite-mode.sh  test-test-artifacts.sh  validate-template.sh
src/: __main__.py  config.py  llm.py  main.py
src/agent/: __init__.py  prompts.py  researcher.py
src/report/: __init__.py  generator.py
src/tools/: __init__.py  search.py
tests/: conftest.py
tests/integration/: test_cli.py
tests/unit/: test_config.py  test_generator.py  test_llm.py  test_main.py  test_researcher.py  test_search.py
